--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="top-container">
         <h1>I'm Swapnal</h1>
         <h2>A Web Developer</h2>
-        <img src="./images/web-development-icon.png" alt="web-development-icon" width="30%"/>
+        <img src="./images/web-development-icon.png" alt="web-development-icon" width="395" height="328"/>
     </div>
 
     <div class="middle-container">
         <div class="profile">
-            <img src="./images/profilepic.jpg" alt="">
+            <img src="./images/profilepic.jpg" alt="profilepic" width="200" height="263" />
             <h2>Hello!</h2>
             <div class="intro">
                 <p>I'm a hardworking & self-motivated Web Developer who always wants to be creative at work. I have proficient knowledge of html, css and javascript with responsive website designing.</p>
@@ -31,14 +31,14 @@
             <h2>My Skills</h2>
             <div class="parent">
                 <div class="typing">
-                    <img src="./images/typing.jpg" alt="typing">
+                    <img src="./images/typing.jpg" alt="typing" width="275" height="183" />
                 </div>
                 <div class="coding">
                     <h3>Design & Development</h3>
                     <p>I started learning code with passion of building responsive website from 2 years. I have gained a wealth of experience designing and developing mobile and web applications.</p>
                 </div>
                 <div class="artist">
-                    <img src="./images/creativity.jpg" alt="creativity">
+                    <img src="./images/creativity.jpg" alt="creativity" width="275" height="183" />
                 </div>
                 <div class="design">
                     <h3>Creativity</h3>
